Changes in animation transitions

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,9 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="NoPreview" parent="AppTheme">
+        <!-- Disable change with white between activities. -->
+        <item name="android:windowDisablePreview">true</item>
+    </style>
+
 </resources>
