--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -19,6 +19,7 @@
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="@dimen/login_edit_text_height"
+            android:layout_marginBottom="24dp"
             android:layout_marginEnd="32dp"
             android:layout_marginStart="32dp"
             android:background="@drawable/edittext_rounded"
@@ -27,10 +28,10 @@
             android:paddingLeft="@dimen/login_edit_text_space"
             android:paddingRight="@dimen/login_edit_text_space"
             android:textSize="@dimen/login_text_size"
+            app:layout_constraintBottom_toTopOf="@+id/buttonForgot"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="184dp" />
+            app:layout_constraintStart_toStartOf="parent" />
 
 
         <Button
@@ -40,7 +41,6 @@
             android:layout_marginBottom="192dp"
             android:layout_marginEnd="32dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="24dp"
             android:background="@drawable/button_ripple_bg"
             android:text="@string/login_reset_password"
             android:textColor="@color/colorPrimaryText"
@@ -48,9 +48,7 @@
             app:layout_constraintBottom_toTopOf="@+id/buttonGoLogIn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintStart_toStartOf="parent" />
 
 
         <Button
