--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,9 @@
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary"
         app:menu="@menu/bottom_navigation_menu"
+        app:itemBackground="@drawable/bottom_navigation_ripple"
+        app:itemIconTint="@drawable/bottom_navigation_color"
+        app:itemTextColor="@drawable/bottom_navigation_color"
         android:elevation="16dp"/>
 
     <android.support.v4.view.ViewPager
